--- a/Robotics/ROS/beginner_tutorials/package.xml
+++ b/Robotics/ROS/beginner_tutorials/package.xml
@@ -59,6 +59,9 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 
+  <build_depend>message_generation</build_depend> <!--To build messages that we generate-->
+  <exec_depend>message_runtime</exec_depend> <!--To execute the created messages-->
+  <!--These 2 above are for msg and srv created by us, the user.-->
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
